--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -18,11 +18,12 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
     
+    # Configure AWS credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::086726293497:role/Github-Action
+        role-duration-seconds: 500
         aws-region: eu-central-1
 
     - name: Login to Amazon ECR
