--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    # Configure AWS credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::086726293497:role/Github-Action
+        role-duration-seconds: 500
         aws-region: eu-central-1
 
     # Destroy applied infrastructure
