--- a/.github/workflows/start_training.yml
+++ b/.github/workflows/start_training.yml
@@ -13,6 +13,12 @@ jobs:
     name: Start Training
     runs-on: ubuntu-latest
 
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./ml_ops/infrastructure
+
     steps:
 
     - name: Check out code
