--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -7,6 +7,10 @@ name: Deploy Docker Images to AWS ECR
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
