--- a/.github/workflows/start_training.yml
+++ b/.github/workflows/start_training.yml
@@ -7,6 +7,10 @@ name: Start training
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
