--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -32,6 +32,11 @@ jobs:
         role-duration-seconds: 1000
         aws-region: eu-central-1
 
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      id: init
+      run: terraform init
+
     # Destroy applied infrastructure
     - name: Terraform Destroy
       id: destroy
