Adjust working directory

--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -21,7 +21,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./ml_ops/infrastructure
+        working-directory: ./ml_ops
 
     steps:
 
