Add directory to COPY command

--- a/ml_ops/src/training/Dockerfile
+++ b/ml_ops/src/training/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8
 
 RUN mkdir /src
-COPY pyproject.toml /src
+COPY /ml_ops/src/training/pyproject.toml /src
 
 WORKDIR /src
 
@@ -12,6 +12,6 @@ RUN python -m pip install poetry
 RUN poetry config virtualenvs.create false
 RUN poetry install --no-dev
 
-COPY /src /src
+COPY /ml_ops/src/training/src /src
 
 ENTRYPOINT [ "python", "training.py" ]
