Add aws ecr path to docker push command

--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -47,8 +47,8 @@ jobs:
         IMAGE_TAG: training
       run: |
         docker build --file ./ml_ops/src/training/Dockerfile -t training .
-        docker tag training:latest 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/training:latest
-        docker push training:latest
+        docker tag latest 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/training
+        docker push 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/training:latest
     - name: Build, tag, and push image for generating inference from pre-trained ml model to Amazon ECR
       id: inference
       env:
@@ -57,5 +57,5 @@ jobs:
         IMAGE_TAG: infernce
       run: |
         docker build --file ./ml_ops/src/inference/Dockerfile -t inference .
-        docker tag inference:latest 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/inference:latest
-        docker push inference:latest
+        docker tag latest 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/inference
+        docker push 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/inference:latest
