--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -47,8 +47,8 @@ jobs:
         IMAGE_TAG: training
       run: |
         docker build --file ./ml_ops/src/training/Dockerfile -t training .
-        docker tag training 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/ml-ops
-        docker push 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/ml-ops:training
+        docker tag training 086726293497.dkr.ecr.eu-central-1.amazonaws.com/ml-ops
+        docker push 086726293497.dkr.ecr.eu-central-1.amazonaws.com/ml-ops:training
     - name: Build, tag, and push image for generating inference from pre-trained ml model to Amazon ECR
       id: inference
       env:
@@ -57,5 +57,5 @@ jobs:
         IMAGE_TAG: infernce
       run: |
         docker build --file ./ml_ops/src/inference/Dockerfile -t inference .
-        docker tag inference 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/ml-ops
-        docker push 086726293497.dkr.ecr.eu-cental-1.amazonaws.com/ml-ops:inference
+        docker tag inference 086726293497.dkr.ecr.eu-central-1.amazonaws.com/ml-ops
+        docker push 086726293497.dkr.ecr.eu-central-1.amazonaws.com/ml-ops:inference
