--- a/.github/workflows/start_inference.yml
+++ b/.github/workflows/start_inference.yml
@@ -37,4 +37,4 @@ jobs:
 
     - name: Run docker container to start inference service for generating predictions from pre-trained machine learning mdoel
       id: start_inference_service
-      run: docker run --file ./ml_ops/src/inference/Dockerfile
+      run: docker run inference
