--- a/.github/workflows/start_inference.yml
+++ b/.github/workflows/start_inference.yml
@@ -35,6 +35,10 @@ jobs:
         role-duration-seconds: 1000
         aws-region: eu-central-1
 
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
     - name: Run docker container to start inference service for generating predictions from pre-trained machine learning mdoel
       id: start_inference_service
       run: docker run 086726293497.dkr.ecr.eu-central-1.amazonaws.com/inference:latest
