--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: arn:aws:iam::086726293497:role/Github-Action
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
         role-duration-seconds: 1000
         aws-region: eu-central-1
 
@@ -47,8 +47,8 @@ jobs:
         IMAGE_TAG: training
       run: |
         docker build --file ./ml_ops/src/training/Dockerfile -t training .
-        docker tag training:latest 086726293497.dkr.ecr.eu-central-1.amazonaws.com/training
-        docker push 086726293497.dkr.ecr.eu-central-1.amazonaws.com/training:latest
+        docker tag training:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/training
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/training:latest
     - name: Build, tag, and push image for generating inference from pre-trained ml model to Amazon ECR
       id: inference
       env:
@@ -57,5 +57,5 @@ jobs:
         IMAGE_TAG: inference
       run: |
         docker build --file ./ml_ops/src/inference/Dockerfile -t inference .
-        docker tag inference:latest 086726293497.dkr.ecr.eu-central-1.amazonaws.com/inference
-        docker push 086726293497.dkr.ecr.eu-central-1.amazonaws.com/inference:latest
+        docker tag inference:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference:latest
