--- a/.github/workflows/start_training.yml
+++ b/.github/workflows/start_training.yml
@@ -41,4 +41,4 @@ jobs:
 
     - name: Run docker container to start training of a machine learning model
       id: start_training
-      run: docker run 086726293497.dkr.ecr.eu-central-1.amazonaws.com/training:latest
+      run: docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/training:latest
