--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -59,3 +59,13 @@ jobs:
         docker build --file ./ml_ops/src/inference/Dockerfile -t inference .
         docker tag inference:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference:latest
+    - name: Build, tag, and push image for generating inference from pre-trained ml model (using flask app) to Amazon ECR
+      id: inference
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ml
+        IMAGE_TAG: inference
+      run: |
+        docker build --file ./ml_ops/src/inference_api/Dockerfile -t inference_api .
+        docker tag inference_api:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference_api
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference_api:latest
