--- a/.github/workflows/push_docker_images_to_ecr.yml
+++ b/.github/workflows/push_docker_images_to_ecr.yml
@@ -60,11 +60,11 @@ jobs:
         docker tag inference:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference:latest
     - name: Build, tag, and push image for generating inference from pre-trained ml model (using flask app) to Amazon ECR
-      id: inference
+      id: inference_api
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ml
-        IMAGE_TAG: inference
+        IMAGE_TAG: inference_api
       run: |
         docker build --file ./ml_ops/src/inference_api/Dockerfile -t inference_api .
         docker tag inference_api:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com/inference_api
